@startuml
package "UI Layer" {
  [ConsoleUI]
}

package "Service Layer" {
  [UserServiceImpl]
  [TaskServiceImpl]
  interface "UserService"
  interface "TaskService"
}

package "DAO Layer" {
  [UserDaoImpl]
  [TaskDaoImpl]
  interface "UserDao"
  interface "TaskDao"
}

package "Model Layer" {
  [User]
  [Task]
  [Role]
  [TaskStatus]
  [UrgencyLevel]
}

package "Utility" {
  [DatabaseConnection]
}

database "MySQL" {
  [users]
  [tasks]
}

[ConsoleUI] --> "UserService"
[ConsoleUI] --> "TaskService"
"UserService" <|.. [UserServiceImpl]
"TaskService" <|.. [TaskServiceImpl]
[UserServiceImpl] --> "UserDao"
[TaskServiceImpl] --> "TaskDao"
"UserDao" <|.. [UserDaoImpl]
"TaskDao" <|.. [TaskDaoImpl]
[UserDaoImpl] --> [DatabaseConnection]
[TaskDaoImpl] --> [DatabaseConnection]
[UserDaoImpl] ..> [User]
[TaskDaoImpl] ..> [Task]
[DatabaseConnection] --> [MySQL]
@enduml